# util

./: .gitignore  CMakeLists.txt  abstract-db-connections.cpp  abstract-db-connections.h  algorithms.cpp  algorithms.h  climate-common.cpp  climate-common.h  climate.cpp  climate.h  datastructures.h  date.cpp  date.h  db.cpp  db.h  helper.h  read-ini.cpp  read-ini.h  stl-algo-boost-lambda.h  use-stl-algo-boost-lambda.h
climate/: CMakeLists.txt  climate-common.cpp  climate-common.h  climate-file-io.cpp  climate-file-io.h  climate.cpp  climate.h  regionalization.cpp  regionalization.h
climate-misc/: climate.pro  climateWithRegionalization.pro  compile.pl  db-connections.ini  input.ini  main.cpp  regionalization.pro  run-regionalization
climate-misc/docs/: cloudamount-to-globalradiation-from-dresden.xls
climate/climate/: CMakeLists.txt
climate/climate-common/: CMakeLists.txt
climate/climate-file-io/: CMakeLists.txt
clock-diagram/: clock-spec.cpp  clock-spec.h
common/: common-typedefs.h  dll-exports.h  sole.hpp
db/: CMakeLists.txt  abstract-db-connections.cpp  abstract-db-connections.h  db.cpp  db.h  orm--.cpp  orm--.h  orm--typedefs.h
db-misc/: compile.pl  db-async.cpp  db-async.h  db-qt.cpp  db-qt.h  db-qt.pro  db-typed-select.cpp  db-typed-select.h  db.pro
db/db/: CMakeLists.txt
db/sqlite3/: CMakeLists.txt
grid/: feldw.cpp  grid+.cpp  grid+.h  grid-manager.cpp  grid-manager.h  grid-manager.h.autosave  grid.cpp  grid.h  list-hdf-main.cpp  platform.cpp  platform.h  types.h
grid-misc/: compile.pl  grid-swig.pro  grid.i  grid.pro  list-hdf.pro
interpolation/: compile.pl  db.cpp  db.h  interpol-swig.pro  interpol.cpp  interpol.h  interpol.i  interpol.pro
json11/: CMakeLists.txt  json11-helper.cpp  json11-helper.h  json11.cpp  json11.hpp
mmk/: extract_bundeslaender_subgrids.py
qt-tools/: algorithms-qt.cpp  algorithms-qt.h  code-runner.h  qt-helper.cpp  qt-helper.h  qt-tools.cpp  qt-tools.h  qt-values-file-loader.cpp  qt-values-file-loader.h
soil/: CMakeLists.txt  Conversion.hx  capillary-rise-rates.json  constants.cpp  constants.h  conversion.cpp  conversion.h  ka5-soil-aggregation-values.json  ka5-soil-characteristic-data.json  soil-from-db.cpp  soil-from-db.h  soil.cpp  soil.h  soil_conversion.py  soil_io.py  soil_io3.py
tools/: CMakeLists.txt  agricultural-helper.cpp  agricultural-helper.h  algorithms.cpp  algorithms.h  auto-deleter.h  coord-trans.cpp  coord-trans.h  coord-trans.sqlite  datastructures.h  date.cpp  date.h  debug.cpp  debug.h  helper.cpp  helper.h  json11-helper.cpp  json11-helper.h  read-ini.cpp  read-ini.h  stl-algo-boost-lambda.h  time-measurement.cpp  time-measurement.h  use-stl-algo-boost-lambda.h  values-file-loader.cpp  values-file-loader.h  zmq-helper.cpp  zmq-helper.h
tools/coord-trans/: CMakeLists.txt
tools/date/: CMakeLists.txt
tools/debug/: CMakeLists.txt
tools/helpers/: CMakeLists.txt
tools/read-ini/: CMakeLists.txt
zeromq/: CMakeLists.txt  zhelpers.hpp  zmq-helper.cpp  zmq-helper.h
